tests/test2/fail/fail-stringBinop.m2
int main(){
	String a;
	String b;
	a = "he";
	b = "ld";
	a - b;

	return 0;
}